--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       }
     </style>
     
-    <script type="text/javascript" src="rcjssss.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
